# halfhand

./: .claudeignore  .dockerignore  .gitignore  1.0-definition-of-done.html  404.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  RELEASE_NOTES_1.0.0.md  RELEASING.md  SECURITY.md  STABILITY.md  adapters.html  audit.toml  completions.html  deny.toml  dist-workspace.toml  doctor.html  export-import.html  faq.html  gc.html  halfhand-srs-v0.1.0-beta.1.md  index.html  json.html  justfile  manual-qa.html  mcp-proxy.html  performance.html  print.html  quickstart.html  recording.html  redaction-design.html  redaction.html  replay-inspect.html  search.html  (+5 more)
.github/: FUNDING.yml  (+2 more)
fuzz/: Cargo.toml
fuzz/corpus/claude_jsonl/: seed_sample_1  seed_sample_2  seed_sample_3  seed_sample_4  seed_sample_5  seed_sample_6  seed_tool_result  seed_tool_use
fuzz/corpus/config_toml/: seed_full  seed_integer_size  seed_malformed  seed_unknown_keys
fuzz/corpus/mcp_frame/: seed_notification  seed_request  seed_response
fuzz/fuzz_targets/: blob_decompress.rs  claude_jsonl.rs  codex_jsonl.rs  config_toml.rs  gemini_jsonl.rs  import_bundle.rs  mcp_frame.rs  redact_detect.rs
hh/: Cargo.toml  build.rs
hh-core/: Cargo.toml
hh-core/benches/: adapter_jsonl.rs  search.rs  storage.rs
hh-core/proptest-regressions/: store.txt
hh-core/src/: adapter.rs  blob.rs  bundle.rs  config.rs  deprecation.rs  error.rs  event.rs  lib.rs  migrations.rs  redact.rs  step.rs  store.rs  timeline.rs
hh-core/src/adapter/: error.rs  mod.rs
hh-core/src/adapter/snapshots/: hh_core__adapter__tests__codex_parse_agent_message.snap  hh_core__adapter__tests__codex_parse_function_call_and_output.snap  hh_core__adapter__tests__codex_parse_reasoning.snap  hh_core__adapter__tests__codex_parse_response_item_message.snap  hh_core__adapter__tests__codex_parse_user_message.snap  hh_core__adapter__tests__gemini_parse_agent_message.snap  hh_core__adapter__tests__gemini_parse_user_message.snap  hh_core__adapter__tests__gemini_parse_with_thoughts.snap  hh_core__adapter__tests__gemini_parse_with_tool_calls.snap  hh_core__adapter__tests__parse_assistant_followup_with_model_usage.snap  hh_core__adapter__tests__parse_assistant_with_two_tool_uses.snap  hh_core__adapter__tests__parse_user_text_prompt.snap  hh_core__adapter__tests__parse_user_with_two_tool_results_one_error.snap  hh_core__adapter__tests__snapshot_current_format_fixture_parse.snap
hh-core/src/migrations/: 0001_initial.sql  0002_events_heal_index.sql  0003_imported_from.sql  0004_events_fts.sql  0005_v1_1_0_degrade_and_fts.sql
hh-core/src/snapshots/: hh_core__adapter__tests__codex_parse_agent_message.snap  hh_core__adapter__tests__codex_parse_function_call_and_output.snap  hh_core__adapter__tests__codex_parse_reasoning.snap  hh_core__adapter__tests__codex_parse_response_item_message.snap  hh_core__adapter__tests__codex_parse_user_message.snap  hh_core__adapter__tests__gemini_parse_agent_message.snap  hh_core__adapter__tests__gemini_parse_user_message.snap  hh_core__adapter__tests__gemini_parse_with_thoughts.snap  hh_core__adapter__tests__gemini_parse_with_tool_calls.snap  hh_core__adapter__tests__parse_assistant_followup_with_model_usage.snap  hh_core__adapter__tests__parse_assistant_with_two_tool_uses.snap  hh_core__adapter__tests__parse_user_text_prompt.snap  hh_core__adapter__tests__parse_user_with_two_tool_results_one_error.snap
hh-core/tests/: config_resolution.rs  migration_idempotency.rs  no_network.rs  prop_bundle.rs  prop_redact.proptest-regressions  prop_redact.rs  prop_step.rs
hh-core/tests/fixtures/claude-code/: current-format.jsonl
hh-dist/: Cargo.toml
hh-dist/src/: main.rs
hh-record/: Cargo.toml
hh-record/src/: agent.rs  error.rs  git.rs  lib.rs  mcp_proxy.rs  runner.rs  watcher.rs
hh/src/: cli.rs  completions.rs  export.rs  import.rs  inspect.rs  lib.rs  main.rs  render.rs  search.rs  secrets.rs  ui.rs
hh/src/replay/: data.rs  diff.rs  json.rs  kind.rs  mod.rs  state.rs  theme.rs  ui.rs
hh/src/snapshots/: hh__export__tests__html_is_selfcontained_and_neutralizes_every_xss_surface.snap  hh__export__tests__html_is_selfcontained_escaped_and_snapshot_locked.snap  hh__inspect__tests__degraded_session_ndjson_first_line.snap  hh__inspect__tests__snapshot_diff_created_file.snap  hh__inspect__tests__snapshot_event_json_tool_call.snap  hh__inspect__tests__snapshot_ndjson_stream.snap  hh__inspect__tests__snapshot_step_detail_error.snap  hh__inspect__tests__snapshot_step_detail_tool_pair.snap  hh__inspect__tests__snapshot_step_json.snap  hh__inspect__tests__snapshot_summary.snap  hh__secrets__tests__redact_plain_renders_summary_and_tallies.snap  hh__secrets__tests__scan_plain_renders_findings_table_and_clean_line-2.snap  hh__secrets__tests__scan_plain_renders_findings_table_and_clean_line.snap  hh__tests__doctor_plain_renders_pass_and_fail_lines.snap  hh__tests__gc_plain_renders_prune_and_vacuum.snap  hh__tests__session_table_aligns_headers_and_marks_degraded.snap  hh__tests__session_table_aligns_under_color.snap  hh__tests__stats_plain_renders_counts_and_largest.snap
hh/tests/: cli.rs  cli_conformance.rs  migration_from_beta.rs
hh/tests/fixtures/: fake_agent.ps1  fake_agent.py  fixture_agent.ps1  fixture_agent.py  fixture_agent.sh  interactive.ps1  interactive.sh  mcp_echo_server.py  pty_probe.py  secret_agent.sh  slow.sh
hh/tests/fixtures/beta-db/: README.md  hh.db
hh/tests/snapshots/: cli_conformance__hh_completions_help.snap  cli_conformance__hh_delete_help.snap  cli_conformance__hh_doctor_help.snap  cli_conformance__hh_export_help.snap  cli_conformance__hh_gc_help.snap  cli_conformance__hh_help.snap  cli_conformance__hh_import_help.snap  cli_conformance__hh_inspect_help.snap  cli_conformance__hh_list_help.snap  cli_conformance__hh_mcp_proxy_help.snap  cli_conformance__hh_redact_help.snap  cli_conformance__hh_replay_help.snap  cli_conformance__hh_run_help.snap  cli_conformance__hh_scan_help.snap  cli_conformance__hh_search_help.snap  cli_conformance__hh_stats_help.snap
(+43 files in other folders)
