[workspace]
resolver = "2"
members = ["hh-core", "hh-record", "hh", "hh-dist"]

[workspace.package]
version = "1.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Saadman Rafat"]
repository = "https://github.com/halfhandorg/halfhand"
homepage = "https://halfhandorg.github.io/halfhand/"

# Shared internal deps: path + version so cargo-deny's `bans.wildcards` check
# (which flags deps with no pinned version) doesn't reject our own workspace
# crates, and so the crates are publishable with correct inter-crate version
# constraints. Members reference these via `{ workspace = true }`.
[workspace.dependencies]
hh-core = { path = "hh-core", version = "1.1.0" }
hh-record = { path = "hh-record", version = "1.1.0" }
# The `halfhand` library target (in the `hh` package) is a workspace dep so
# `hh-dist` can reuse `cli::Cli` for asset generation and cargo-deny's
# `bans.wildcards` check is satisfied (pinned path + version).
halfhand = { path = "hh", version = "1.1.0" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Justification: naming types `Store`, `BlobStore` etc. in a module named
# `store`/`blob` reads better than `store::Store`; the repetition is intentional.
module_name_repetitions = "allow"
# Justification: most builders/fallible functions already return Result; tagging
# every one with #[must_use] is noise that does not catch real bugs here.
must_use_candidate = "allow"
# Justification: full rustdoc on every public item is enforced by missing_docs
# (deny) in hh-core; the separate "Errors"/"Panics" doc sections pedantic wants
# are covered inline where relevant, not on every fn.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Justification: the docs reference many tech proper nouns (SQLite, BLAKE3,
# zstd, JSON, TOML, PTY, MCP, UUIDv7, …) as plain text, not doc-links. Backticking
# every occurrence is noise that does not improve the rendered docs.
doc_markdown = "allow"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# cargo-dist builds release binaries with `--profile dist` (see
# dist-workspace.toml and the generated .github/workflows/release.yml). It must
# be defined here or `dist build` fails with "profile `dist` is not defined".
# Inherits the release profile's lto/strip/codegen-units settings.
[profile.dist]
inherits = "release"