[package]
name = "hh-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Halfhand core: storage, blob store, event model, config"
keywords = ["sqlite", "event-store", "blob-store", "recorder", "halfhand"]
categories = ["database", "data-structures"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
# Gates `pub mod fuzzing` wrappers around otherwise-private parsers so the
# fuzz/ crate can drive them without widening the normal public API surface
# (off by default; not part of the semver-checked surface).
fuzzing = []

[dependencies]
# Justification (SRS §6): rusqlite bundled so the DB ships with the binary and we
# never depend on a system libsqlite3 (portable, reproducible builds).
rusqlite = { version = "0.31", features = ["bundled"] }
# Justification: config.toml + event payloads are (de)serialized.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Justification: blob store is keyed by BLAKE3 (SRS §4.1/FR-1.4).
blake3 = "1.5"
# Justification: blobs are zstd-compressed (SRS §4.1/FR-1.4).
zstd = "0.13"
# Justification: sessions are UUIDv7 (SRS §1.3/FR-1.2).
uuid = { version = "1.10", features = ["v7"] }
# Justification: humanized timestamps in error/list output (SRS §6). `macros`
# for the `format_description!` macro used in [`store::format_ts_ms`]; `parsing`
# for RFC3339 timestamp parsing in the Claude Code adapter (FR-1.5).
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
# Justification: config.toml parsing (SRS §4.2). Not listed in SRS §6 but required
# by §4.2; a minimal, widely-used, well-maintained parser.
toml = "0.8"
# Justification: platform-appropriate config/data dirs (SRS §2.3). Listed under
# hh in SRS §6, but path resolution is a core concern (Store needs the data dir)
# so it lives here to keep the bin thin.
directories = "5"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
# Justification: snapshot tests of the Claude adapter's pure parser output
# (FR-1.5; CLAUDE.md testing standards: "Snapshot tests with insta"). Dual
# Apache-2.0/MIT, both in the cargo-deny allow-list. Default features only
# (no `serialization`/`yaml` extras) to keep the added dep graph small.
insta = "1"
# Justification: property tests for storage invariants (blob refcounts, step
# assignment, migration idempotency) per CLAUDE.md's v1.0.0 addendum.
proptest = "1"