[package]
name = "hh-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Halfhand core: storage, blob store, event model, config"
keywords = ["sqlite", "event-store", "blob-store", "recorder", "halfhand"]
categories = ["database", "data-structures"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
# Gates `pub mod fuzzing` wrappers around otherwise-private parsers so the
# fuzz/ crate can drive them without widening the normal public API surface
# (off by default; not part of the semver-checked surface).
fuzzing = []

[dependencies]
# Justification (SRS §6): rusqlite bundled so the DB ships with the binary and we
# never depend on a system libsqlite3 (portable, reproducible builds).
rusqlite = { version = "0.31", features = ["bundled"] }
# Justification: config.toml + event payloads are (de)serialized.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Justification: blob store is keyed by BLAKE3 (SRS §4.1/FR-1.4).
blake3 = "1.5"
# Justification: blobs are zstd-compressed (SRS §4.1/FR-1.4).
zstd = "0.13"
# Justification: sessions are UUIDv7 (SRS §1.3/FR-1.2).
uuid = { version = "1.10", features = ["v7"] }
# Justification: humanized timestamps in error/list output (SRS §6). `macros`
# for the `format_description!` macro used in [`store::format_ts_ms`]; `parsing`
# for RFC3339 timestamp parsing in the Claude Code adapter (FR-1.5).
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
# Justification: config.toml parsing (SRS §4.2). Not listed in SRS §6 but required
# by §4.2; a minimal, widely-used, well-maintained parser.
toml = "0.8"
# Justification: platform-appropriate config/data dirs (SRS §2.3). Listed under
# hh in SRS §6, but path resolution is a core concern (Store needs the data dir)
# so it lives here to keep the bin thin.
directories = "5"
# Justification (redaction pipeline, docs/redaction-design.md): the secret
# detectors are compiled regexes over untrusted recorded text. The `regex`
# crate guarantees linear-time matching (no catastrophic backtracking on
# hostile input — required for the "never panic on malformed input" fuzz
# contract) and is the standard, well-maintained choice.
regex = "1"
thiserror = "1"
# Justification (FR export/import, `hh-core::bundle`): the portable session
# bundle (`hh export --bundle`) packs a manifest, an event log, and referenced
# blobs into a tar, which is then zstd-compressed as a whole. `tar` is the
# same crate Cargo itself uses to build package tarballs — pure Rust, no
# network, no unsafe in the read/write paths this crate uses.
tar = "0.4"

[dev-dependencies]
tempfile = "3"
# Justification: snapshot tests of the Claude adapter's pure parser output
# (FR-1.5; CLAUDE.md testing standards: "Snapshot tests with insta"). Dual
# Apache-2.0/MIT, both in the cargo-deny allow-list. Default features only
# (no `serialization`/`yaml` extras) to keep the added dep graph small.
insta = "1"
# Justification: property tests for storage invariants (blob refcounts, step
# assignment, migration idempotency) per CLAUDE.md's v1.0.0 addendum.
proptest = "1"
# Justification: criterion benches (CLAUDE.md v1.0.0 addendum / NFR-1: "criterion
# benches live in benches/"). `default-features = false` drops `plotters`/`rayon`
# (HTML plots and parallel benchmark groups we do not use) so the bench dep
# tree stays lean; `cargo_bench_support` is required for `cargo bench` to
# dispatch to criterion's harness. Dev-only — never linked into the shipped `hh`
# binary, so it does not affect NFR-2's no-network-crate check (criterion pulls
# no HTTP client; verified via `cargo tree`).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# Justification: bench *setup* bulk-inserts N events into a temp DB in one
# transaction (the writer thread's per-event channel round-trip would make a
# 100k-event fixture take >30s to build; only the *read* paths are measured).
# Already a normal dependency of hh-core; re-listed here so external benches
# can name `rusqlite::Connection` directly (Cargo exposes only
# `[dev-dependencies]` + the crate's public API to external bench crates).
rusqlite = { version = "0.31", features = ["bundled"] }

# Area 1 / NFR-1 regression-gated benches. `harness = false` because criterion
# supplies its own `main` via `criterion_main!`. `adapter_jsonl` requires the
# `fuzzing` feature (it calls `hh_core::adapter::fuzzing::fuzz_parse_line`, the
# existing dev-only entry point into the otherwise-private Claude JSONL parser
# — kept off the default, semver-checked API surface per the `fuzzing` feature's
# stated contract). Run with `cargo bench -p hh-core --features fuzzing` (or
# `just bench`); `cargo bench -p hh-core` runs the three ungated storage benches.
[[bench]]
name = "storage"
harness = false

[[bench]]
name = "adapter_jsonl"
harness = false
required-features = ["fuzzing"]

[[bench]]
name = "search"
harness = false