[package]
name = "halfhand"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Local-first CLI flight recorder for AI agents"

[lints]
workspace = true

[[bin]]
name = "hh"
path = "src/main.rs"

[dependencies]
hh-core = { workspace = true }
hh-record = { workspace = true }
# Justification: CLI parsing (SRS §6).
clap = { version = "4", features = ["derive"] }
# Justification: error context in the binary (CLAUDE.md / NFR-5).
anyhow = "1"
# Justification: colored output, respecting NO_COLOR (SRS §6 / NFR-7).
owo-colors = "4"
# Justification: `hh list --json` and `hh inspect --json` emit stable JSON
# (FR-5.1/FR-4). Already in the dependency tree via hh-core; named here so the
# binary builds event payloads directly rather than hand-formatting JSON.
serde_json = "1"
# Justification (SRS §6/FR-3): the replay TUI's widget/layout/rendering
# engine. Version pinned to the crossterm 0.27 line already used by hh-record
# (FR-1.1's PTY proxy) so the workspace carries one crossterm major version.
ratatui = "0.26"
# Justification (SRS §6/FR-3): raw mode, alternate screen, and input events
# for the replay TUI. Matches hh-record's crossterm version.
crossterm = "0.27"
# Justification (FR-3.2): unified diffs in the detail pane. Already in the
# dependency tree transitively via insta (hh-core dev-dependency); named here
# so the binary can compute diffs directly.
similar = "2.7"
# Justification (FR-3.5): bounded LRU cache for the last 50 lazily-fetched
# event bodies, so scrolling the timeline does not re-hit SQLite/blob storage
# for rows already visited. Pinned >=0.16.3 (RUSTSEC-2026-0002: 0.12's
# `IterMut` unsound; fixed upstream, we never use `iter_mut` but take the fix
# anyway since it's a free version bump).
lru = "0.18"

[build-dependencies]
# Justification: embed git sha into --version (NFR-8). No network.
built = { version = "0.7", features = ["git2"] }

[dev-dependencies]
# Justification: integration tests create throwaway data dirs (CLAUDE.md:
# never the real data dir — set HH_DATA_DIR).
tempfile = "3"
# Justification: integration tests assert on the on-disk SQLite schema
# directly (DR-2: hh.db is a public, documented interface), without going
# through hh-core's Store (which would re-run migrations and hide the schema).
rusqlite = { version = "0.31", features = ["bundled"] }